--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,10 +1,123 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head><meta charset="UTF-8"><title>Politique de confidentialité</title></head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Politique de Confidentialité - [Nom de votre bot] Bot Discord</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            color: #333;
+        }
+        h1, h2 {
+            color: #5865F2; /* Couleur de Discord */
+        }
+        h1 {
+            border-bottom: 2px solid #5865F2;
+            padding-bottom: 10px;
+        }
+        h2 {
+            margin-top: 25px;
+        }
+        .mise-a-jour {
+            font-style: italic;
+            color: #666;
+        }
+        a {
+            color: #5865F2;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        footer {
+            margin-top: 40px;
+            padding-top: 20px;
+            border-top: 1px solid #ddd;
+            font-size: 0.9em;
+            color: #666;
+        }
+    </style>
+</head>
 <body>
-  <h1>Politique de confidentialité du bot Discord</h1>
-  <p>Ce bot ne stocke pas de données personnelles sans consentement explicite. Aucune information privée n'est partagée avec des tiers.</p>
-  <p>Les données traitées (commandes, messages, identifiants) sont utilisées uniquement pour les fonctionnalités internes du bot.</p>
-  <p>Pour toute question, contactez : contact@example.com</p>
+    <header>
+        <h1>Politique de Confidentialité pour [Nom de votre bot] Bot Discord</h1>
+        <p class="mise-a-jour">Dernière mise à jour : [Date]</p>
+    </header>
+
+    <section>
+        <p>Cette Politique de Confidentialité décrit comment LeBotCoin collecte, utilise et partage vos informations lorsque vous utilisez notre bot Discord.</p>
+        
+        <h2>1. Informations Collectées</h2>
+        <p>Le Bot peut collecter et stocker les informations suivantes lorsque vous interagissez avec lui :</p>
+        <ul>
+            <li><strong>Informations utilisateur Discord :</strong> ID utilisateur, pseudonyme, discriminator, avatar et surnom sur le serveur lorsque vous interagissez avec le bot.</li>
+            <li><strong>Informations du serveur :</strong> ID du serveur, nom du serveur et paramètres du serveur lorsque le bot est ajouté à un serveur Discord.</li>
+            <li><strong>Données de commandes :</strong> Contenu des commandes et paramètres spécifiques nécessaires au fonctionnement du bot.</li>
+            <li><strong>Journaux d'activité :</strong> Données techniques comme les adresses IP (anonymisées), horodatages et types d'interactions pour le dépannage et la sécurité.</li>
+        </ul>
+
+        <h2>2. Utilisation des Informations</h2>
+        <p>Nous utilisons les informations collectées pour :</p>
+        <ul>
+            <li>Fournir et maintenir les fonctionnalités du bot</li>
+            <li>Améliorer et personnaliser l'expérience utilisateur</li>
+            <li>Résoudre les problèmes techniques</li>
+            <li>Prévenir les abus et assurer la sécurité</li>
+            <li>Respecter nos obligations légales</li>
+        </ul>
+
+        <h2>3. Partage des Informations</h2>
+        <p>Nous ne partageons pas vos informations personnelles avec des tiers, sauf dans les cas suivants :</p>
+        <ul>
+            <li>Avec votre consentement explicite</li>
+            <li>Pour se conformer à des obligations légales</li>
+            <li>Pour protéger nos droits ou la sécurité des utilisateurs</li>
+            <li>Avec des prestataires de services qui aident au fonctionnement du bot (sous stricte confidentialité)</li>
+        </ul>
+
+        <h2>4. Conservation des Données</h2>
+        <p>Nous conservons vos données seulement aussi longtemps que nécessaire pour :</p>
+        <ul>
+            <li>Fournir les services du bot</li>
+            <li>Respecter nos obligations légales</li>
+            <li>Résoudre les litiges</li>
+            <li>Appliquer nos conditions d'utilisation</li>
+        </ul>
+        <p>Vous pouvez demander la suppression de vos données en nous contactant (voir section 6).</p>
+
+        <h2>5. Sécurité des Données</h2>
+        <p>Nous mettons en œuvre des mesures de sécurité techniques et organisationnelles appropriées pour protéger vos données contre tout accès non autorisé, altération ou destruction.</p>
+
+        <h2>6. Vos Droits</h2>
+        <p>Conformément au RGPD, vous avez le droit :</p>
+        <ul>
+            <li>D'accéder à vos données personnelles</li>
+            <li>De rectifier des informations incorrectes</li>
+            <li>De demander la suppression de vos données</li>
+            <li>De limiter le traitement de vos données</li>
+            <li>De vous opposer au traitement de vos données</li>
+            <li>À la portabilité des données</li>
+        </ul>
+        <p>Pour exercer ces droits, contactez-nous à : <a href="mailto:votre@email.com">votre@email.com</a></p>
+
+        <h2>7. Modifications de cette Politique</h2>
+        <p>Nous pouvons mettre à jour cette politique occasionnellement. Nous vous notifierons des changements importants via notre serveur Discord ou par d'autres moyens.</p>
+
+        <h2>8. Nous Contacter</h2>
+        <p>Pour toute question concernant cette politique de confidentialité, contactez-nous :</p>
+        <ul>
+            <li>Email : <a href="mailto:votre@email.com">votre@email.com</a></li>
+            <li>Serveur Discord : <a href="[lien d'invitation]">[Nom du serveur]</a></li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>© 2025 LeBotCoin. Tous droits réservés.</p>
+    </footer>
 </body>
 </html>
