--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -46,7 +46,7 @@
 <body>
     <header>
         <h1>Politique de Confidentialité pour [Nom de votre bot] Bot Discord</h1>
-        <p class="mise-a-jour">Dernière mise à jour : [Date]</p>
+        <p class="mise-a-jour">Dernière mise à jour : 02/07/2025</p>
     </header>
 
     <section>
@@ -103,7 +103,7 @@
             <li>De vous opposer au traitement de vos données</li>
             <li>À la portabilité des données</li>
         </ul>
-        <p>Pour exercer ces droits, contactez-nous à : <a href="mailto:votre@email.com">votre@email.com</a></p>
+        <p>Pour exercer ces droits, contactez-nous à : <a href="mailto:votre@email.com">constructbot.studio@gmail.com</a></p>
 
         <h2>7. Modifications de cette Politique</h2>
         <p>Nous pouvons mettre à jour cette politique occasionnellement. Nous vous notifierons des changements importants via notre serveur Discord ou par d'autres moyens.</p>
@@ -111,7 +111,7 @@
         <h2>8. Nous Contacter</h2>
         <p>Pour toute question concernant cette politique de confidentialité, contactez-nous :</p>
         <ul>
-            <li>Email : <a href="mailto:votre@email.com">votre@email.com</a></li>
+            <li>Email : <a href="mailto:constructbot.studio@gmail.com">constructbot.studio@gmail.com</a></li>
             <li>Serveur Discord : <a href="[lien d'invitation]">[Nom du serveur]</a></li>
         </ul>
     </section>
