--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -62,7 +62,7 @@
 </head>
 <body>
     <header>
-        <h1>Conditions d'Utilisation de [Nom du Bot]</h1>
+        <h1>Conditions d'Utilisation de LeBotCoin</h1>
         <p class="last-updated">Dernière mise à jour : 02/07/2025</p>
     </header>
 
